--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -18,7 +18,7 @@
 
     <servlet>
         <servlet-name>mealsServlet</servlet-name>
-        <servlet-class>ru.javawebinar.topjava.web.MealsServlet</servlet-class>
+        <servlet-class>ru.javawebinar.topjava.web.MealServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>mealsServlet</servlet-name>
